# weather-ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
src/: prompt.py
