[project]
name = "weather-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.3.4",
    "langchain-community==0.4.2",
    "langchain-google-genai==4.2.4",
    "langchain-groq==1.1.2",
    "python-dotenv==1.2.2",
]
